# bob

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: checkout.h  commands.h  commit.h  config.h  diff.h  index.h  merge.h  object.h  repository.h  status.h  tree.h  utils.h  worktree.h
libs/: CMakeLists.txt
src/: checkout.c  commands.c  commit.c  config.c  diff.c  index.c  main.c  merge.c  object.c  repository.c  status.c  tree.c  utils.c  worktree.c
tests/: lib.sh  run.sh  test_add.sh  test_branch.sh  test_checkout.sh  test_commit.sh  test_diff.sh  test_graph.sh  test_hash_object.sh  test_init.sh  test_merge.sh  test_reset.sh  test_status.sh
